service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loco
spec:
  selector:
    app: loco
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 7000
