ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loco
spec:
  rules:
    - host: loco.private.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loco
                port:
                  number: 8080
